# ros2_roomba_line_follower

./: .gitignore  LICENSE  README.md  teste_cv2.py
src/roomba_bringup/: package.xml  setup.cfg  setup.py
src/roomba_bringup/launch/: pi_robot_launch.py  wsl_test.launch.py
src/roomba_logic/: package.xml  setup.cfg  setup.py
src/roomba_logic/launch/: vision_logic.launch.py
src/roomba_logic/roomba_logic/: brain_node.py  detector_aruco.py  draw_track.py  mission_control.py  mission_control_pi.py  pid_controller_node.py  turtle_circulo.py
src/roomba_pi_drivers/: package.xml  setup.cfg  setup.py
src/roomba_pi_drivers/launch/: pi_test.launch.py
src/roomba_pi_drivers/roomba_pi_drivers/: line_sensor_node.py  motor_driver.py  pi_camera_node.py
src/roomba_wsl_drivers/: package.xml  setup.cfg  setup.py
src/roomba_wsl_drivers/roomba_wsl_drivers/: ponte_camera.py
windows_bridge/: stream_camera.py
