<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roomba_bringup</name>
  <version>0.0.0</version>
  <description>Launches (arquivos de inicializacao) gerais do sistema</description>
  <maintainer email="contato.xcardoso@gmail.com">xamacardoso</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>roomba_logic</depend>
  <depend>roomba_wsl_drivers</depend>
  <depend>roomba_pi_drivers</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
